{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "998487dd-a0cc-48f3-af19-1ae607531871",
            "actions": [
                {
                    "name": "LeftHandle",
                    "type": "Value",
                    "id": "a85b2720-6680-4202-abe8-0836853acb68",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandle",
                    "type": "Value",
                    "id": "b8cb3ca8-4ded-4e55-a91f-dc70f9e17e06",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "LeftHandle",
                    "id": "409d251e-31ef-484e-8744-31e0d3f4961a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "59706126-089b-4217-8319-89ad43c609cc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "c1a247e2-de05-4d71-b8cf-860f3b2a519c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "RightHandle",
                    "id": "5ebac632-e3e3-420c-a5ab-4ac56ed48904",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "88bedc41-0f4f-4c62-bc8b-b743fa21e9ea",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "08126495-6652-4f51-a8a3-002638674568",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandle",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}